# notes-crud-rust

./: components.json  package-lock.json  package.json
src/: main.tsx
src-tauri/: .env  Cargo.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal  tauri.conf.json
src-tauri/migrations/: 20231105025842_init.down.sql  20231105025842_init.up.sql
src-tauri/src/: main.rs  model.rs  schema.rs
src/components/ui/: radio-group.tsx  switch.tsx
src/features/notes/: Form.tsx  NotesTable.tsx  handlers.ts  schema.ts
src/features/users/: Form.tsx  handlers.ts  schema.ts
src/pages/: page.tsx
